--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en" dir="ltr">
 	<head>
 		<title>ZeroFour by HTML5 UP</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport website 3D mailbox" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
@@ -82,7 +82,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/what.JPG" alt="" /></a>
+												<a href="#" class="image featured" aria-label="Read more about 3D mailbox thrill"><img src="images/what.JPG" alt="" /></a>
 												<header class="second icon fa-user">
 													<h3>We bring the thrill</h3>
 													<p>of flight to your e-mail inbox</p>
@@ -91,7 +91,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/colors.JPG" alt="" /></a>
+												<a href="#" class="image featured" aria-label="Read more about 3D mailbox 80 world airlines"><img src="images/colors.JPG" alt="" /></a>
 												<header class="second icon fa-cog">
 													<h3>Flying the colors of</h3>
 													<p>more than 80 world airlines</p>
@@ -100,7 +100,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/qantas.JPG" alt="" /></a>
+												<a href="#" class="image featured" aria-label="Read more about 3D mailbox email from australia"><img src="images/qantas.JPG" alt="" /></a>
 												<header class="second icon fa-bar-chart-o">
 													<h3>Get an email from Australia,</h3>
 													<p>it arrives on Qantas...</p>
@@ -171,7 +171,7 @@
 
 												<!-- Excerpt -->
 													<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/domestic.JPG" alt="" /></a>
+														<a href="#" class="image left" aria-label="Read more about 3D mailbox email delivered by domestic airlines"><img src="images/domestic.JPG" alt="" /></a>
 														<div>
 															<header>
 																<span class="date">July 24</span>
@@ -185,7 +185,7 @@
 
 												<!-- Excerpt -->
 													<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/airforceone.JPG" alt="" /></a>
+														<a href="#" class="image left" aria-label="Read more about 3D mailbox email delivered by air force one"><img src="images/airforceone.JPG" alt="" /></a>
 														<div>
 															<header>
 																<span class="date">July 18</span>
@@ -199,7 +199,7 @@
 
 												<!-- Excerpt -->
 													<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/tower.JPG" alt="" /></a>
+														<a href="#" class="image left" aria-label="Read more about 3D mailbox airfield ATC tower"><img src="images/tower.JPG" alt="" /></a>
 														<div>
 															<header>
 																<span class="date">July 14</span>
@@ -219,7 +219,7 @@
 											<section class="box spotlight">
 												<h2 class="icon fa-file-text-o">Spotlight</h2>
 												<article>
-													<a href="#" class="image featured"><img src="images/inoutbox.JPG" alt=""></a>
+													<a href="#" class="image featured" aria-label="Read more about 3D mailbox read your email"><img src="images/inoutbox.JPG" alt=""></a>
 													<header>
 														<h3><a href="#">Right-click any plane to read</a></h3>
 														<p>its "flight strip" and take action</p>
