--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -4,11 +4,11 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en" dir="ltr">
 	<head>
 		<title>No Sidebar - ZeroFour by HTML5 UP</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport website 3D mailbox" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="no-sidebar is-preload">
@@ -73,7 +73,7 @@
 												<p>read all about our 3D mailbox pricing</p>
 											</header>
 
-											<span class="image featured"><img src="images/airplane.JPG" alt="" /></span>
+											<span class="image featured" aria-label="Read more about 3D mailbox special prices"><img src="images/airplane.JPG" alt="" /></span>
 
 											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
@@ -128,7 +128,7 @@
 
 												<!-- Excerpt -->
 													<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+														<a href="#" class="image left" aria-label="Read more about 3D mailbox faq"><img src="images/pic04.jpg" alt="" /></a>
 														<div>
 															<header>
 																<span class="date">updated JAN 15 2019</span>
@@ -142,7 +142,7 @@
 
 												<!-- Excerpt -->
 													<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/pic05.jpg" alt="" /></a>
+														<a href="#" class="image left" aria-label="Read more about 3D mailbox tech faq"><img src="images/pic05.jpg" alt="" /></a>
 														<div>
 															<header>
 																<span class="date">updated JAN 15 2019</span>
@@ -156,7 +156,7 @@
 
 												<!-- Excerpt -->
 													<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
+														<a href="#" class="image left" aria-label="Read more about 3D mailbox contact us"><img src="images/pic06.jpg" alt="" /></a>
 														<div>
 															<header>
 																<span class="date">dont hesitate to </span>
@@ -176,7 +176,7 @@
 											<section class="box spotlight">
 												<h2 class="icon fa-file-text-o">Spotlight</h2>
 												<article>
-													<a href="#" class="image featured"><img src="images/creditcards.JPG" alt=""></a>
+													<a href="#" class="image featured" aria-label="Read more about 3D mailbox creditcards"><img src="images/creditcards.JPG" alt=""></a>
 													<header>
 														<h3><a href="#">most credit cards accepted</a></h3>
 														<p>before buying you must agree with our flexibale conditions</p>
